--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   profiles:
     active: dev
   datasource:
-    url: jdbc:mysql://localhost:33306/plumemo
+    url: jdbc:mysql://localhost:33306/plumemo?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
     username: plumemo
     password: plumemo
-    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.jdbc.Driver
